<resources>
    <string name="app_name">Arte y Escritura</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btninicio">Inicio</string>
    <string name="btnquienes">Quiénes Somos</string>
    <string name="btnservicios">Servicios</string>
    <string name="btncontactar">Contactar</string>
    <string name="btnnoticias">Noticias</string>
    <string name="btndonaciones">Donaciones</string>
    <string name="btnpagos">Pagos</string>
    <string name="texvie">Fundación Arte Y Escritura</string>
    <string name="btnmessenger">Messenger de Facebook</string>
    <string name="textvieww">CONTACTAR</string>
    <string name="btndescriptionnn">Description</string>
</resources>
